--- a/template/index.html
+++ b/template/index.html
@@ -1,100 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-       <title>Cyprus Car Price Forecast</title>
-      <link rel="stylesheet" href="static/css/style.css">
-       <link rel="stylesheet" type="text/css"
-           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+<head xmlns="http://www.w3.org/1999/xhtml">
+    <meta charset="UTF-8">
+    <title>Cyprus Car Price Forecaster</title>
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
 
-
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
-  </head>
-  <body class="bg-dark">
-     <div class="container">
-       <div class="row">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 
-         <div class="card mt-50" style="width: 100%; height: 100%">
-           <div class="card-header" style="text-align: center">
-                <h1> Cyprus Car Price Sale Forecaster</h1>
+</head>
+<body class="bg-dark">
+
+<div class="container">
+    <div class="row">
+        <div class="card mt-50" style="width: 100%; height: 100%">
+            <div class="card-header" style="text-align: center">
+                <h1>Welcome to Cyprus Car Price Forecaster</h1>
             </div>
-           <div class="card-body">
-             <div class="col-12" style="text-align: center">
-                    <h5>This app Forecasts the price of a selected Second-hand cars in Cyprus. Fill in the details below: </h5>
+            <div class="card-body">
+                <div class="col-12" style="text-align: center">
+                    <h5>Application Forecasts the Price of Secondhand Car. Fill in the details below: </h5>
                 </div>
-             <br>
+                <br>
                 <form method="post" accept-charset="utf-8" name="Modelform">
-                   <div class="col-md-10 form-group" style="text-align: center">
-                   <label><b>Select the Brand:</b> </label><br>
-                     <select class="selectpicker form-control" id="company" name="company" required="1">
-                       {% for company in companies %}
-                                <option value="{{ company }}">{{ company }}</option>
-                       {% endfor %}
-                       </select>
-                   </div>
+                    <div class="col-md-10 form-group" style="text-align: center">
+                        <label><b>Select the company:</b> </label><br>
+                        <select class="selectpicker form-control" id="company" name="company" required="1"
+                                onchange="load_car_models(this.id,'car_models')">
+                            {% for company in companies %}
+                            <option value="{{ company }}">{{ company }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
                     <div class="col-md-10 form-group" style="text-align: center">
                         <label><b>Select the model:</b> </label><br>
                         <select class="selectpicker form-control" id="car_models" name="car_models" required="1">
-                            {% for model in car_models %}
-                                <option value="{{ model }}">{{ model }}</option>
-                       {% endfor %}
                         </select>
                     </div>
-                  <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select Year :</b> </label><br>
+                    <div class="col-md-10 form-group" style="text-align: center">
+                        <label><b>Select Year of Purchase:</b> </label><br>
                         <select class="selectpicker form-control" id="year" name="year" required="1">
-                          {% for year in years %}
+                            {% for year in years %}
                             <option value="{{ year }}">{{ year }}</option>
-                          {% endfor %}
+                            {% endfor %}
                         </select>
                     </div>
-                  <div class="col-md-10 form-group" style="text-align: center">
+                    <div class="col-md-10 form-group" style="text-align: center">
                         <label><b>Select the Fuel Type:</b> </label><br>
                         <select class="selectpicker form-control" id="fuel_type" name="fuel_type" required="1">
-                             {% for fuel in fuel_types %}
+                            {% for fuel in fuel_types %}
                             <option value="{{ fuel }}">{{ fuel }}</option>
-                          {% endfor %}
-
+                            {% endfor %}
                         </select>
                     </div>
-                  <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Enter the Mileage (Kilometres) :</b> </label><br>
+                    <div class="col-md-10 form-group" style="text-align: center">
+                        <label><b>Enter the Number of Kilometres that the car has travelled:</b> </label><br>
                         <input type="text" class="form-control" id="kilo_driven" name="kilo_driven"
                                placeholder="Enter the kilometres driven ">
                     </div>
-                  <div class="col-md-10 form-group" style="text-align: center">
+                    <div class="col-md-10 form-group" style="text-align: center">
                         <button  class="btn btn-primary form-control" onclick="send_data()">Predict Price</button>
                     </div>
                 </form>
-             <br>
-             <div class="row">
+                <br>
+                <div class="row">
                     <div class="col-12" style="text-align: center">
                         <h4><span id="prediction"></span></h4>
                     </div>
-           </div>
+                </div>
             </div>
-           </div>
-       </div>
-     </div>
+        </div>
+    </div>
+</div>
 
-     <script>
-       function load_car_models(company_id,car_model_id)
+<script>
+
+    function load_car_models(company_id,car_model_id)
     {
         var company=document.getElementById(company_id);
         var car_model= document.getElementById(car_model_id);
         console.log(company.value);
         car_model.value="";
         car_model.innerHTML="";
+        {% for company in companies %}
+            if( company.value == "{{ company }}")
+            {
+                {% for model in car_models %}
+                    {% if company in model %}
 
+                        var newOption= document.createElement("option");
+                        newOption.value="{{ model }}";
+                        newOption.innerHTML="{{ model }}";
+                        car_model.options.add(newOption);
+                    {% endif %}
+                {% endfor %}
+            }
+        {% endfor %}
     }
 
     function form_handler(event) {
@@ -104,16 +113,15 @@
     {
         document.querySelector('form').addEventListener("submit",form_handler);
 
-
         var fd=new FormData(document.querySelector('form'));
 
         var xhr= new XMLHttpRequest({mozSystem: true});
 
         xhr.open('POST','/predict',true);
-        document.getElementById('prediction').innerHTML="Wait! Predicting Price.....";
+        document.getElementById('prediction').innerHTML="Wait! Forecasting Price.....";
         xhr.onreadystatechange = function(){
             if(xhr.readyState == XMLHttpRequest.DONE){
-                document.getElementById('prediction').innerHTML="Forecast: TL "+xhr.responseText;
+                document.getElementById('prediction').innerHTML="Prediction: TL" +xhr.responseText;
 
             }
         };
@@ -122,28 +130,18 @@
 
         xhr.send(fd);
     }
-
-      </script>
-
+</script>
 
 
-
-
-
-
-
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-  </body>
-
-  </body>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+</body>
 </html>
