--- a/template/index.html
+++ b/template/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <form method="post" accept-charset="utf-8" name="Modelform">
                     <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the company:</b> </label><br>
+                        <label><b>Select Brand:</b> </label><br>
                         <select class="selectpicker form-control" id="company" name="company" required="1"
                                 onchange="load_car_models(this.id,'car_models')">
                             {% for company in companies %}
@@ -41,12 +41,12 @@
                         </select>
                     </div>
                     <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the model:</b> </label><br>
+                        <label><b>Select Model:</b> </label><br>
                         <select class="selectpicker form-control" id="car_models" name="car_models" required="1">
                         </select>
                     </div>
                     <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select Year of Purchase:</b> </label><br>
+                        <label><b>Select Year :</b> </label><br>
                         <select class="selectpicker form-control" id="year" name="year" required="1">
                             {% for year in years %}
                             <option value="{{ year }}">{{ year }}</option>
@@ -54,7 +54,7 @@
                         </select>
                     </div>
                     <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the Fuel Type:</b> </label><br>
+                        <label><b>Select  Fuel Type:</b> </label><br>
                         <select class="selectpicker form-control" id="fuel_type" name="fuel_type" required="1">
                             {% for fuel in fuel_types %}
                             <option value="{{ fuel }}">{{ fuel }}</option>
@@ -62,7 +62,7 @@
                         </select>
                     </div>
                     <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Enter the Number of Kilometres that the car has travelled:</b> </label><br>
+                        <label><b>Enter Number of Kilometres  the car has travelled:</b> </label><br>
                         <input type="text" class="form-control" id="kilo_driven" name="kilo_driven"
                                placeholder="Enter the kilometres driven ">
                     </div>
@@ -121,7 +121,7 @@
         document.getElementById('prediction').innerHTML="Wait! Forecasting Price.....";
         xhr.onreadystatechange = function(){
             if(xhr.readyState == XMLHttpRequest.DONE){
-                document.getElementById('prediction').innerHTML="Prediction: TL" +xhr.responseText;
+                document.getElementById('prediction').innerHTML="Prediction: TL " +xhr.responseText;
 
             }
         };
